<resources>
    <string name="wallet_open_content" translatable="false">
        No不需要翻译。
    </string>
    <string name="auth_passed">No不需要翻译</string>
    <string name="auth_no_passed">No不需要翻译</string>
    <string name="register_phone_success">No不需要翻译</string>
    <string name="register_phone_failed">No不需要翻译</string>
    <string name="digits_amount">0123456789.</string>
    <string name="zero_money">0.00</string>
    <string name="receipt_payment">No不需要翻译</string>
    <string name="rp_payment">No不需要翻译</string>
    <string name="rp_payment_tip1">No不需要翻译</string>
    <string name="rp_payment_tip2">No不需要翻译</string>
    <string name="rp_payment_tip3">No不需要翻译</string>
    <string name="rp_payment_tip4">No不需要翻译</string>
    <string name="rp_receipt">No不需要翻译</string>
    <string name="rp_receipt2">No不需要翻译</string>
    <string name="rp_receipt_tip1">No不需要翻译</string>
    <string name="rp_receipt_tip2">No不需要翻译</string>
    <string name="rp_receipt_tip3">No不需要翻译</string>
    <string name="rp_receipt_tip4">保存收款码</string>
    <string name="success">成功</string>
    <string name="qr_code_synthesis_fail">收款码合成失败</string>
    <string name="receipt_money_num">收款金额</string>
    <string name="receipt_add_desc">添加收钱说明</string>
    <string name="receipt_pay_single">付款给个人</string>
    <string name="receipt_add_remake">添加备注</string>
    <string name="receipt_set_money">设置金额</string>
    <string name="creating_qr_code">正在生成二维码&#8230;</string>
    <string name="tip_saved_qr_code">二维码已保存至相册</string>
    <string name="yuan">元</string>
    <string name="need_input_money">请输入金额</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="withdraw">提现</string>
    <string name="withdrawal_instructions">提现说明</string>
    <string name="arrival_micro_signal">到账微信号</string>
    <string name="withdrawal_fee_rate">提现手续费率0.1%</string>
    <string name="withdrawal_amount">提现金额</string>
    <string name="band_transfer">银行转账</string>
    <string name="transfer_input_money">请输入正确的金额</string>
    <string name="bank_card">网银支付</string>
    <string name="scan_recharge">充值</string>
    <string name="get_money_code">收款二维码</string>
    <string name="scan_recharge_wx_alipay_tip1">1.点击保存收款码到手机相册，跟着打开%s的扫一扫，点击右上角的‘相册’，选择刚保存的收款码转账%s元，请在转账备注中填写您的通讯号：%s，充值将更快到账。</string>
    <string name="scan_recharge_wx_alipay_tip2">2.完成转账后请点击下面的“确定”按钮</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="scan_recharge_band_tip1">1.付款时请在付款备注中填写您的通讯号：%s，充值将更快到账。</string>
    <string name="scan_recharge_band_body1">收款人&#160;&#160;&#160;&#160;</string>
    <string name="scan_recharge_band_body2">银行卡号</string>
    <string name="scan_recharge_band_body3">开户银行</string>
    <string name="wait_server_notify">请求发送成功，等待后台通过审核</string>
    <string name="withdraw_to">提现到</string>
    <string name="please_select_withdraw_account">请选择提现账号</string>
    <string name="sure_withdraw">确认提现</string>
    <string name="withdraw_say">提现说明：</string>
    <string name="withdraw_tip1">1.支持两种提现方式：支付宝提现，银行卡提现</string>
    <string name="withdraw_tip2">2.支付宝提现需要输入支付宝提现账号信息</string>
    <string name="withdraw_tip3">3.银行卡提现需要输入银行卡号，开户号，户名开户支行。</string>
    <string name="withdraw_tip4">4.提现后，平台会对提现信息进行审核，审核确认提现后将收到提现通过提示，请留意您的账号，注意收款。</string>
    <string name="select_withdraw_type">选择提现方式</string>
    <string name="select_withdraw_add_alipay_account">添加支付宝账号</string>
    <string name="select_withdraw_add_band_card_account">添加银行卡账号</string>
    <string name="select_withdraw_alipay_name">平台姓名</string>
    <string name="select_withdraw_alipay_account">平台账号</string>
    <string name="select_withdraw_band_card_name">持卡人姓名</string>
    <string name="select_withdraw_band_card_account">银行卡卡号</string>
    <string name="select_withdraw_band_name">银行名称&#160;&#160;&#160;&#160;</string>
    <string name="select_withdraw_band_son_name">支行名称&#160;&#160;&#160;&#160;</string>
    <string name="select_withdraw_band_remark">备注信息&#160;&#160;&#160;&#160;</string>
    <string name="select_withdraw_name">名字</string>
    <string name="select_withdraw_account">账号</string>
    <string name="select_withdraw_band">银行</string>
    <string name="select_withdraw_band_son_name_hint">支行（非对公账号可不填）</string>
    <string name="must_edit_info_cannot_null">必填信息不能为空</string>
    <string name="please_select_withdraw_type">请选择提现方式</string>
    <string name="select_withdraw_modify_alipay_account">修改支付宝账号</string>
    <string name="select_withdraw_modify_band_card_account">修改银行卡账号</string>
    <string name="pay_type">No不需要翻译：</string>
    <string name="scan_recharge_notify">No不需要翻译</string>
    <string name="scan_recharge_money">No不需要翻译：</string>
    <string name="scan_recharge_time">No不需要翻译：</string>
    <string name="scan_withdraw_notify">No不需要翻译</string>
    <string name="scan_withdraw_time">No不需要翻译：</string>
    <string name="scan_withdraw_money">No不需要翻译：</string>
    <string name="scan_withdraw_fail">No不需要翻译</string>
    <string name="scan_recharge_state">交易状态：</string>
    <string name="scan_fail_reason">失败原因：</string>
    <string name="back_withdraw">审核提现</string>
    <string name="already_pay_ask">是否已完成支付？</string>
    <string name="already_pay">已支付</string>
    <string name="pay_time">付款时间</string>
    <string name="receipt_time">到账时间</string>
    <string name="bill_total_time">%d年%d月</string>
    <string name="bill_total_money">支出  ￥%s  收入 ￥%s</string>
    <string name="sip_refused">已拒绝</string>
    <string name="sip_remote_refused">对方已拒绝</string>
    <string name="tip_live_room_online">其他设备正在直播中</string>
    <string name="tip_not_set_download">后台未配置新版本下载地址</string>
    <string name="new_device_login_sure">新设备登录确认</string>
    <string name="tip_red_packet_than_account">红包数量不可大于最大限制</string>
    <string name="tip_copied_to_clipboard">已复制到剪贴板</string>
    <string name="label_communication">Uid</string>
    <string name="sure">确定</string>
    <string name="label_total">合计：</string>
    <string name="label_select_recharge_type">请选择充值方式</string>
    <string name="money_sum">总金额:</string>
    <string name="all_withdrawals">全部提现</string>
    <string name="tip_alipay_failed">启动支付宝失败</string>
    <string name="tip_alipay_auth_failed">支付宝授权失败</string>
    <string name="tip_withdraw_success">提现成功</string>
    <string name="tip_withdraw_empty">请输入提现金额</string>
    <string name="tip_withdraw_too_little">提现金额至少为1元</string>
    <string name="tip_balance_not_enough">No不需要翻译</string>
    <string name="withdraw_wechat">No不需要翻译</string>
    <string name="withdraw_alipay">No不需要翻译</string>
    <string name="tip_withdraw_cost">No不需要翻译</string>
    <string name="edit">编辑</string>
    <string name="rename_align">备注</string>
    <string name="band">绑定</string>
    <string name="please_input_pay_type">请选择支付方式</string>
    <string name="wx_pay">微信支付</string>
    <string name="zfb_pay">支付宝支付</string>
    <string name="uni_pay">网银转账</string>
    <string name="lijichongzhi">立即充值</string>
    <string name="no_suport_tixian">不支持的提现方式</string>
    <string name="add_success">添加成功</string>
    <string name="update_success">修改成功</string>
    <string name="del_success">删除成功</string>
    <string name="chongzhi">充值</string>
    <string name="tixian">提现</string>
    <string name="hongbao">红包</string>
    <string name="shouhongbao">收红包</string>
    <string name="chulizhong">处理中</string>
    <string name="leixing">类型</string>
    <string name="zhuangtai">状态</string>
    <string name="shijian">时间</string>
    <string name="danhao">单号</string>
    <string name="miaoshu">描述</string>
    <string name="shenheyijian">审核意见</string>
    <string name="dehongbao">的红包</string>
    <string name="chakanjilu">查看记录</string>
    <string name="yizhuanru">已转入钱包余额</string>
    <string name="weizhishijian">未知时间</string>
    <string name="hongbao_tip1">%s个红包共%s元，%s被领完</string>
    <string name="hongbao_tip2">该红包已过期。已领取%s/%s个，共%s/%s元</string>
    <string name="hongbao_tip3">红包金额%s元，该红包已过期</string>
    <string name="hongbao_tip4">已领取%s/%s个，共%s/%s元</string>
    <string name="hongbao_tip5">红包金额%s元，等待对方领取</string>
    <string name="hongbao_tip6">未领取的红包过期后自动退回</string>
    <string name="hongbao_tip7">未领取的红包，将在24小时后自动退回</string>
    <string name="year">年</string>
    <string name="gongshoudao">%s共收到</string>
    <string name="no_red">暂无红包记录</string>
    <string name="ge">%s个</string>
    <string name="gefachu">%s共发出</string>
    <string name="pingrenpin">拼人品红包</string>
    <string name="putonghongbao">普通红包</string>
    <string name="ge2">%d/%d个</string>
    <string name="yuan2">%s元</string>
    <string name="fahongbao">发红包</string>
    <string name="zhuanzhangshuoming">转账说明</string>
    <string name="please_input_shuoming">请输入说明内容</string>
    <string name="please_input_jinge">请输入金额</string>
    <string name="jinegeshicuowu">金额格式错误</string>
    <string name="buzhichijie">不支持的金额</string>
    <string name="zhuanzhangchenggong">转账成功</string>
    <string name="zhuanzhang">转账</string>
    <string name="tianjiazhuangzhang">添加转账说明</string>
    <string name="zhuanzhangjine">转账金额</string>
    <string name="shoukuan">收款</string>
    <string name="niyishoukuan">你已收款</string>
    <string name="qianbaoyue">钱包余额</string>
    <string name="zhuanzhangshijian">转账时间</string>
    <string name="shoukuanshijian">收款时间</string>
    <string name="tuihuanzhuanzhang">退还%s的转账？</string>
    <string name="tuihuan">退还</string>
    <string name="zanbutuihuan">暂不退还</string>
    <string name="my_wallet">我的钱包</string>
    <string name="wodeyue">我的余额(元)</string>
    <string name="qianbaomingxi">钱包明细</string>
    <string name="hongbaojilu">红包记录</string>
    <string name="yinhangka">银行卡</string>
    <string name="xiugaimima">修改密码</string>
    <string name="bangzhuzhongxin">帮助中心</string>
    <string name="kankandajia">看看大家的人品</string>
    <string name="hongbaobeiqiangguang">哎呀，红包被一抢而光了</string>
    <string name="hongbaoguoqi">超过24小时未领取将过期</string>
    <string name="hongbaoguoqi2">可惜，当前红包过期了</string>
    <string name="charge_money">充值</string>
    <string name="charge_money_amount">充值金额</string>
    <string name="dainishoukuan">待你收款</string>
    <string name="yitiannei">1天内未确认，将退还给对方。</string>
    <string name="shenfenhzenghao">身份证号</string>
    <string name="shurushenfenhzenghao">请输入本人身份证号</string>
    <string name="nihaimeiyoumingxi">你还没有明细哦！</string>
    <string name="tuijian">推荐</string>
    <string name="qianbaozhanghukaitong">钱包账户开通说明</string>
    <string name="benrenshoujihao">本人手机号</string>
    <string name="shurubenrenshoujihao">请输入本人手机号</string>
    <string name="shurubenrenxingming">请输入本人姓名</string>
    <string name="tongyishouquan">同意授权</string>
    <string name="yiyuedutongyi">已阅读同意</string>
    <string name="zhifuyonghufuwu">《支付用户服务协议》</string>
    <string name="zhifuyinsi">《支付隐私政策》</string>
    <string name="shurujine">输入金额</string>
    <string name="chongzhishibai">充值失败</string>
    <string name="tijiaochongzhi">提交充值</string>
    <string name="yinhangchulizhong">银行处理中</string>
    <string name="wanchengchongzhi">完成充值</string>
    <string name="chongzhicehnggong">充值成功</string>
    <string name="gongxifacai">恭喜发财</string>
    <string name="lijilngqu">立即领取</string>
    <string name="kankanrenpin">看看大家的人品</string>
    <string name="sanqianjinhongbao">塞钱进红包</string>
    <string name="weilinquhongbaotuihui">未领取的红包，将在24小时后自动退回</string>
    <string name="tixianjine">提现金额</string>
    <string name="quanbutixian">全部提现</string>
    <string name="tixianshenqing">提现申请</string>
    <string name="shouxufei">手续费</string>
    <string name="daozhangyinhang">到账银行</string>
    <string name="daozhangyinhangka">到账银行卡</string>
    <string name="tijaioshijian">提交时间</string>
    <string name="fuwufei">服务费</string>
    <string name="shoudaohongbaoshu">收到红包数</string>
    <string name="xiugaichenggong">修改成功</string>
    <string name="benfuwuyous">本服务由%s提供</string>
    <string name="qingshuruzhifumima">请输入支付密码</string>
    <string name="qingshezhizhifumima">请设置支付密码</string>
</resources>