<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <com.watayouxiang.androidutils.widget.WtTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_40"
        app:tb_background="@color/white"
        app:tb_tvTitle_text="@string/tixian" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_withdraw_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/a_bg_for_payment"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdrawal_amount"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_14_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="￥"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp_24"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tixianmoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_4"
                        android:layout_marginTop="@dimen/dp_12"
                        android:layout_marginRight="20dp"
                        android:background="@null"
                        android:inputType="number"
                        android:maxLength="11"
                        tools:text="123"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp_24"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    style="@style/View_Line"
                    android:layout_marginTop="16dp"
                    android:background="#FFE6E6E6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money_sum"
                        android:textColor="@color/gray_999999"
                        android:textSize="@dimen/sp_14_text_size" />

                    <TextView
                        android:id="@+id/blance_weixin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp5"
                        android:textColor="@color/gray_999999"
                        android:layout_weight="1"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tixianall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/all_withdrawals"
                        android:textColor="@color/theme_color"
                        android:textSize="@dimen/sp_14_text_size"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/a_bg_for_payment"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw_to"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_16_text_size" />

                <View
                    style="@style/View_Line"
                    android:layout_marginTop="15dp" />

                <LinearLayout
                    android:id="@+id/ll_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/type_iv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone"
                        tools:src="@mipmap/ic_band_small"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/type_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="@string/please_select_withdraw_account"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp_14_text_size" />

                    <ImageView
                        style="@style/basic_info"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

            </LinearLayout>

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/sure_withdraw_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:qmui_backgroundColor="@color/account_sel_ok_bg_color"
                app:qmui_borderColor="@color/transparent"
                app:qmui_borderWidth="0px"
                app:qmui_radius="24dp"
                android:text="@string/sure_withdraw" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw_say"
                    android:textColor="#FF666666"
                    android:textSize="@dimen/sp_14_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/withdraw_tip1"
                    android:textColor="#FF666666"
                    android:textSize="@dimen/sp_14_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/withdraw_tip2"
                    android:textColor="#FF666666"
                    android:textSize="@dimen/sp_14_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/withdraw_tip3"
                    android:textColor="#FF666666"
                    android:textSize="@dimen/sp_14_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/withdraw_tip4"
                    android:textColor="#FF666666"
                    android:textSize="@dimen/sp_14_text_size" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
